--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,10 @@ jobs:
       #      - v1-dependencies-
 
       #- run: yarn install
-      - run: |
-        DATE=2020-01-21
-        mkdir -p $DATE
-        echo "....Downloading IRC logs for $DATE..."
-        curl -# "https://w3c-ccg.s3.digitalbazaar.com/minutes/$DATE-irc.log" > $DATE/irc-raw.log
+      - run: DATE=2020-01-21
+        #mkdir -p $DATE
+        #echo "....Downloading IRC logs for $DATE..."
+        #curl -# "https://w3c-ccg.s3.digitalbazaar.com/minutes/$DATE-irc.log" > $DATE/irc-raw.log
       
 
       #- save_cache:
