--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       #      - v1-dependencies-
 
       #- run: yarn install
-      - run: DATE=2020-01-21
+      - run: ../download-minutes.sh
         #mkdir -p $DATE
         #echo "....Downloading IRC logs for $DATE..."
         #curl -# "https://w3c-ccg.s3.digitalbazaar.com/minutes/$DATE-irc.log" > $DATE/irc-raw.log
