clean up scripts

--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -2,14 +2,13 @@ name: Download raw minutes
 
 on:
   repository_dispatch:
-    types: do-something
+    types: start
   schedule:
     - cron:  '*/5 * * * *'
-      # 
       # 0 18 * * TUE
 
 jobs:
-  build:
+  download-minutes:
 
     runs-on: ubuntu-latest
 
@@ -17,26 +16,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Setup custom environment variables
       run: git config --global push.default simple && git config --global user.email "kimdhamilton@gmail.com" && git config --global user.name "Kimbot"
-        
-    #- name: Run a one-line script
-    #  run: echo Hello, world!
-    #- name: Run a multi-line script
-    #  run: |
-    #    echo Add other actions to build,
-    #    echo test, and deploy your project.
     - name: Pull raw meeting log file
       run: sh ./download-minutes.sh
 
-    # command: git config --global push.default simple && git config --global user.email "$email" && git config --global user.name "$name"
-        
-      # Download and cache dependencies
-      #- restore_cache:
-      #    keys:
-      #      - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-      #      - v1-dependencies-
-
-      #- run: yarn install
-      #- run: sh ./download-minutes.sh
 
 
