--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -1,6 +1,9 @@
 name: Publish minutes
 
-on: [push]
+on:
+  push:
+    paths:
+    - 'irc.log'
 
 jobs:
   generate-html:
@@ -10,7 +13,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-      if: test -f ${{ DATE/irc.log }}
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -23,7 +25,7 @@ jobs:
         sh ./generate-html.sh
       env:
         CI: true
-  job2:
+  send-email:
     runs-on: ubuntu-latest
     needs: generate-html
     steps:
