--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -20,5 +20,23 @@ jobs:
       env: { DATE: "2020-01-21" }
       run: sh ./download-minutes.sh
 
+  send-email:
+    runs-on: ubuntu-latest
+    needs: download-minutes
+    steps:
+    - name: Send email
+      uses: dawidd6/action-send-mail@v1.3.0
+   
+      with:
+        server_address: smtp.gmail.com
+        server_port: 465
+        username: kimdhamilton
+        password: ${{ secrets.password }}
+        subject: raw minutes are downloaded!
+        body: you need to clean up this shit
+        to: kimdhamilton+456@gmail.com
+        from: kimdhamilton@gmail.com
+        #content_type: # optional, default is text/plain
+
 
 
