--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -4,7 +4,7 @@ on:
   repository_dispatch:
     types: start
   schedule:
-    - cron:  '*/* * * * *'
+    - cron:  '* * * * *'
       #'*/1 * * * *'
       # 0 18 * * TUE
 
