--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -4,8 +4,7 @@ on:
   repository_dispatch:
     types: start
   schedule:
-    - cron:  '* * * * *'
-      #'*/1 * * * *'
+    - cron:  '*/5 * * * *'
       # 0 18 * * TUE
 
 jobs:
