--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -20,6 +20,20 @@ jobs:
       env: { DATE: "2020-01-21" }
       run: sh ./download-minutes.sh
 
+    - uses: stefanzweifel/git-auto-commit-action@v2.5.0
+      with:
+        commit_message: Apply automatic changes
+        branch: ${{ github.head_ref }}
+
+        # Optional git params
+        commit_options: '--no-verify --signoff'
+
+        # Optional glob pattern of files which should be added to the commit
+        file_pattern: \*.log
+
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   send-email:
     runs-on: ubuntu-latest
     needs: download-minutes
