--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -25,6 +25,21 @@ jobs:
         sh ./generate-html.sh
       env:
         CI: true
+        
+    - uses: stefanzweifel/git-auto-commit-action@v2.5.0
+      with:
+        commit_message: Add html minutes for ${{ DATE }} telecon [ci skip]
+        branch: ${{ github.head_ref }}
+
+        # Optional git params
+        commit_options: '--no-verify --signoff'
+
+        # Optional glob pattern of files which should be added to the commit
+        file_pattern: index.html
+
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   send-email:
     runs-on: ubuntu-latest
     needs: generate-html
