--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -25,10 +25,11 @@ jobs:
         sh ./generate-html.sh
       env:
         CI: true
+        DATE: $DATE
         
     - uses: stefanzweifel/git-auto-commit-action@v2.5.0
       with:
-        commit_message: Add html minutes for ${{ DATE }} telecon [ci skip]
+        commit_message: Add html minutes for $DATE telecon [ci skip]
         branch: ${{ github.head_ref }}
 
         # Optional git params
@@ -39,6 +40,7 @@ jobs:
 
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DATE: $DATE
 
   send-email:
     runs-on: ubuntu-latest
