--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -29,7 +29,7 @@ jobs:
         commit_options: '--no-verify --signoff'
 
         # Optional glob pattern of files which should be added to the commit
-        file_pattern: irc-raw.log
+        #file_pattern: irc-raw.log
 
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
