--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -36,7 +36,7 @@ jobs:
         commit_options: '--no-verify --signoff'
 
         # Optional glob pattern of files which should be added to the commit
-        file_pattern: index.html
+        #file_pattern: index.html
 
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
