--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -26,7 +26,7 @@ jobs:
         branch: ${{ github.head_ref }}
 
         # Optional git params
-        commit_options: '--no-verify --signoff'
+        # commit_options: '--no-verify --signoff'
 
         # Optional glob pattern of files which should be added to the commit
         #file_pattern: irc-raw.log
