--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -33,7 +33,7 @@ jobs:
         branch: ${{ github.head_ref }}
 
         # Optional git params
-        commit_options: '--no-verify --signoff'
+        #commit_options: '--no-verify --signoff'
 
         # Optional glob pattern of files which should be added to the commit
         #file_pattern: index.html
