--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: stefanzweifel/git-auto-commit-action@v2.5.0
       with:
         commit_message: Add raw log for $DATE telecon [ci skip]
-        branch: ${{ github.head_ref }}
+        branch: master
 
         # Optional git params
         # commit_options: '--no-verify --signoff'
