--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: stefanzweifel/git-auto-commit-action@v2.5.0
       with:
         commit_message: Add html minutes for $DATE telecon [ci skip]
-        branch: ${{ github.head_ref }}
+        branch: master
 
         # Optional git params
         #commit_options: '--no-verify --signoff'
