--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -22,7 +22,7 @@ jobs:
 
     - uses: stefanzweifel/git-auto-commit-action@v2.5.0
       with:
-        commit_message: Add raw log for $DATE telecon [ci skip]
+        commit_message: Add raw log for telecon [ci skip]
         branch: master
 
         # Optional git params
@@ -33,7 +33,6 @@ jobs:
 
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DATE: $DATE
 
   send-email:
     runs-on: ubuntu-latest
