--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -18,7 +18,7 @@ jobs:
       run: git config --global push.default simple && git config --global user.email "kimdhamilton@gmail.com" && git config --global user.name "Kimbot"
     - name: Pull raw meeting log file
       env: { DATE: "2020-01-21" }
-      run: sh ./download-minutes.sh
+      run: bash ./download-minutes.sh
 
     - uses: stefanzweifel/git-auto-commit-action@v2.5.0
       with:
