--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -21,6 +21,9 @@ jobs:
       run: |
         npm install
         bash ./generate-html.sh
+        
+        echo "##[set-output name=email_file_name;]file://$DATE/email.log"
+        
       env:
         CI: true
         DATE: "2020-01-21"
@@ -52,9 +55,7 @@ jobs:
         username: kimdhamilton
         password: ${{ secrets.password }}
         subject: minutes are published!
-        body: file://$DATE/email.log
+        body: ${{ jobs.generate_html.steps.generate_html_minutes.outputs.email_file_name }}
         to: kimdhamilton+123@gmail.com
         from: kimdhamilton@gmail.com
         #content_type: # optional, default is text/plain
-      env:
-        DATE: "2020-01-21"
