--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Setup custom environment variables
-      run: git config --global push.default simple && git config --global user.email "kimdhamilton@gmail.com" && git config --global user.name "Kimbot"
+      run: git config --global push.default simple && git config --global user.email "w3c.ccg@gmail.com" && git config --global user.name "W3C CCG"
     - name: Pull raw meeting log file
       env: { DATE: "2020-01-21" }
       run: bash ./download-minutes.sh
@@ -44,12 +44,12 @@ jobs:
       with:
         server_address: smtp.gmail.com
         server_port: 465
-        username: kimdhamilton
+        username: w3c.ccg
         password: ${{ secrets.password }}
         subject: W3C CCG raw minutes need to be cleaned up
         body: Go to scribe-tool (https://w3c-ccg.github.io/meetings/scribe-tool/), paste in the contents of irc-raw.log, clean it up, save results in irc.log (same folder) and commit.
-        to: kimdhamilton+456@gmail.com
-        from: kimdhamilton@gmail.com
+        to: w3c.ccg+456@gmail.com
+        from: w3c.ccg@gmail.com
         #content_type: # optional, default is text/plain
 
 
