--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -54,3 +54,12 @@ jobs:
         to: w3c.ccg+123@gmail.com
         from: w3c.ccg@gmail.com
         #content_type: # optional, default is text/plain
+          
+    - name: Twitter Action
+      uses: xorilog/twitter-action@0.1
+      with:
+        MESSAGE: ${{ format('Credentials CG Minutes Available https://w3c-ccg.github.io/meetings/{0} #w3c #ccg', steps.generate_html_minutes.outputs.date) }}
+        TWITTER_CONSUMER_KEY: ${{ secrets.twitter_api_key }}
+        TWITTER_CONSUMER_SECRET: ${{ secrets.twitter_api_secret }
+        TWITTER_ACCESS_TOKEN: ${{ secrets.twitter_access_token }
+        TWITTER_ACCESS_SECRET:  ${{ secrets.twitter_access_token_secret }
