--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -58,8 +58,8 @@ jobs:
     - name: Twitter Action
       uses: xorilog/twitter-action@0.1
       with:
-        MESSAGE: ${{ format('Credentials CG Minutes Available https://w3c-ccg.github.io/meetings/{0}', steps.generate_html_minutes.outputs.date) }}
-        TWITTER_CONSUMER_KEY: ${{ secrets.twitter_api_key }}
-        TWITTER_CONSUMER_SECRET: ${{ secrets.twitter_api_secret }}
-        TWITTER_ACCESS_TOKEN: ${{ secrets.twitter_access_token }}
-        TWITTER_ACCESS_SECRET:  ${{ secrets.twitter_access_token_secret }}
+        INPUT_MESSAGE: ${{ format('Credentials CG Minutes Available https://w3c-ccg.github.io/meetings/{0}', steps.generate_html_minutes.outputs.date) }}
+        INPUT_TWITTER_CONSUMER_KEY: ${{ secrets.twitter_api_key }}
+        INPUT_TWITTER_CONSUMER_SECRET: ${{ secrets.twitter_api_secret }}
+        INNPUT_TWITTER_ACCESS_TOKEN: ${{ secrets.twitter_access_token }}
+        INPUT_TWITTER_ACCESS_SECRET:  ${{ secrets.twitter_access_token_secret }}
