--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -20,8 +20,9 @@ jobs:
       id: pull_raw_file
       env: 
         DATE: ${{ github.event.client_payload.date }}
-      run: bash ./download-minutes.sh
-      echo "##[set-output name=date;]${DATE}"
+      run: |
+        bash ./download-minutes.sh
+        echo "##[set-output name=date;]${DATE}"
 
     - uses: stefanzweifel/git-auto-commit-action@v2.5.0
       with:
