--- a/.github/workflows/download_raw_minutes.yml
+++ b/.github/workflows/download_raw_minutes.yml
@@ -39,7 +39,7 @@ jobs:
         server_port: 465
         username: w3c.ccg
         password: ${{ secrets.password }}
-        subject: ${{ format('[MINUTES] W3C Credentials CG Call - {0} 12pm ET', steps.pull_raw_file.outputs.date) }}
+        subject: ${{ format('[ACTION - clean up raw minutes] W3C Credentials CG Call - {0} 12pm ET', steps.pull_raw_file.outputs.date) }}
         body: ${{ format('Go to scribe-tool (https://w3c-ccg.github.io/meetings/scribe-tool/), paste in the contents of https://github.com/w3c-ccg/meetings/blob/gh-pages/{0}/irc-raw.log, clean it up, save results in irc.log (same folder) and commit.', steps.pull_raw_file.outputs.date) }}
         to: w3c.ccg+456@gmail.com
         from: w3c.ccg@gmail.com
