--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -15,6 +15,15 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - id: file_changes
+      uses: trilom/file-changes-action@v1
+      with:
+        githubToken: ${{ secrets.GITHUB_TOKEN }}
+    - name: detect_file
+      run: |
+        echo '${{ steps.file_changes.outputs.files_modified}}'
+        echo '${{ steps.file_changes.outputs.files_added}}'
+        echo '${{ steps.file_changes.outputs.files_deleted}}'
     - name: Setup custom environment variables
       run: git config --global push.default simple && git config --global user.email "w3c.ccg@gmail.com" && git config --global user.name "W3C CCG"
     - name: Generate html minutes
