--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -20,10 +20,15 @@ jobs:
       with:
         githubToken: ${{ secrets.GITHUB_TOKEN }}
     - name: detect_file
+      id: detect_file
       run: |
         echo '${{ steps.file_changes.outputs.files_modified}}'
         echo '${{ steps.file_changes.outputs.files_added}}'
-        echo '${{ steps.file_changes.outputs.files_deleted}}'
+        
+        file_regex="(.*)/irc.log"
+        if [[ ${{ steps.file_changes.outputs.files_added}} =~ $file_regex ]]; then
+          echo "##[set-output name=date;]${BASH_REMATCH[1]}"
+        fi
     - name: Setup custom environment variables
       run: git config --global push.default simple && git config --global user.email "w3c.ccg@gmail.com" && git config --global user.name "W3C CCG"
     - name: Generate html minutes
@@ -34,7 +39,7 @@ jobs:
         echo "##[set-output name=date;]${DATE}"
       env:
         CI: true
-        DATE: "2020-01-21"
+        DATE: ${{ steps.detect_file.outputs.date }}
         
     - uses: stefanzweifel/git-auto-commit-action@v2.5.0
       with:
