--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -26,7 +26,7 @@ jobs:
         echo '${{ steps.file_changes.outputs.files_added}}'
         
         file_regex="(.*)/irc.log"
-        if [[ ${{ steps.file_changes.outputs.files_added}} =~ $file_regex ]]; then
+        if [[ ${{ steps.file_changes.outputs.files_added[0]}} =~ $file_regex ]]; then
           echo "##[set-output name=date;]${BASH_REMATCH[1]}"
         fi
     - name: Setup custom environment variables
