--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -29,7 +29,7 @@ jobs:
         if [[ ${{ steps.file_changes.outputs.files_added[0]}} =~ $file_regex ]]; then
           echo "##[set-output name=date;]${BASH_REMATCH[1]}"
         fi
-    - shell: bash
+      shell: bash
     - name: Setup custom environment variables
       run: git config --global push.default simple && git config --global user.email "w3c.ccg@gmail.com" && git config --global user.name "W3C CCG"
     - name: Generate html minutes
