--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -24,10 +24,11 @@ jobs:
       run: |
         echo '${{ steps.file_changes.outputs.files_modified}}'
         echo '${{ steps.file_changes.outputs.files_added }}'
-        
-        file_regex="(.*)/irc.log"
-        if [[ ${{ steps.file_changes.outputs.files_added[0] }} =~ $file_regex ]]; then
-          echo "##[set-output name=date;]${BASH_REMATCH[1]}"
+        new_file='${{ steps.file_changes.outputs.files_added[0] }}'
+        echo $new_file
+        output="${new_file:0:10}"
+        echo $output
+        echo "##[set-output name=date;]${output}"
         fi
       shell: bash
     - name: Setup custom environment variables
