--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -25,8 +25,8 @@ jobs:
         echo '${{ steps.file_changes.outputs.files_modified}}'
         echo '${{ steps.file_changes.outputs.files_added }}'
         new_file=${{ steps.file_changes.outputs.files_added[0] }}
-        echo '${{ new_file }}'
-        output=${{ new_file:0:10 }}
+        echo '$new_file'
+        output='${new_file:0:10}'
         echo '$output'
         echo "##[set-output name=date;]${output}"
       shell: bash
