--- a/.github/workflows/publish_minutes.yml
+++ b/.github/workflows/publish_minutes.yml
@@ -24,7 +24,8 @@ jobs:
       run: |
         echo '${{ steps.file_changes.outputs.files_modified}}'
         echo '${{ steps.file_changes.outputs.files_added }}'
-        new_file=${{ steps.file_changes.outputs.files_added[0] }}
+        arr=${{ steps.file_changes.outputs.files_added }}
+        new_file="${arr[0]}"
         echo $new_file
         output=${new_file:0:10}
         echo $output
